updated heading and title

--- a/resume/index.html
+++ b/resume/index.html
@@ -4,5 +4,7 @@
     <title>Joy Saha Resume</title>
   </head>
   <body>
-    <h1>Joy Saha<h1>
+    <h1>Joy Saha</h1>
+      <p><strong>Senior Journalism Student</strong></p>
+  </body>
 </html>
