--- a/resume/index.html
+++ b/resume/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Joy Saha Resume</title>
   </head>
   <body>
     <h1>Joy Saha</h1>
       <p><strong>Senior Journalism Student</strong></p>
+    <ul>
+      <li>jaitysaha270@gmail.com</li>
+      <li>LinkedIn<li>
+      <li>Twitter</li>
+      <li>GitHub</li>
+    </ul>
   </body>
 </html>
