--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,7 @@
       <p><strong>Senior Journalism Student</strong></p>
     <ul>
       <li>jaitysaha270@gmail.com</li>
-      <li>LinkedIn<li>
+      <li>LinkedIn</li>
       <li>Twitter</li>
       <li>GitHub</li>
     </ul>
