--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,7 @@
       <p><strong>Senior Journalism Student</strong></p>
     <ul>
       <li>jaitysaha270@gmail.com</li>
-      <li>LinkedIn</li>
+      <li><a href="www.linkedin.com/in/joy-saha" target="_blank">LinkedIn</a></li>
       <li>Twitter</li>
       <li>GitHub</li>
     </ul>
