updated linkedin and twitter links

--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,7 @@
     <ul>
       <li>jaitysaha270@gmail.com</li>
       <li><a href="www.linkedin.com/in/joy-saha" target="_blank">LinkedIn</a></li>
-      <li>Twitter</li>
+      <li><a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a></li>
       <li>GitHub</li>
     </ul>
   </body>
