--- a/resume/index.html
+++ b/resume/index.html
@@ -5,12 +5,17 @@
   </head>
   <body>
     <h1>Joy Saha</h1>
-      <p><strong>Senior Journalism Student</strong></p>
-    <ul>
-      <li>jaitysaha270@gmail.com</li>
-      <li><a href="www.linkedin.com/in/joy-saha" target="_blank">LinkedIn</a></li>
-      <li><a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a></li>
-      <li><a href="https://github.com/joysaha101" target="_blank">GitHub</a></li>
-    </ul>
+      <ul>
+        <li>jaitysaha270@gmail.com</li>
+        <li><a href="www.linkedin.com/in/joy-saha" target="_blank">LinkedIn</a></li>
+        <li><a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a></li>
+        <li><a href="https://github.com/joysaha101" target="_blank">GitHub</a></li>
+      </ul>
+    <p><strong>Senior Journalism Student</strong></p>
+      <p>I am a current senior at the University of Maryland studying multi-platform
+        journalism. I'm interested in writing long-form feature stories specifically
+        focused on arts, culture and entertainment.After graduation, I plan on
+        attending law school.</p>
+
   </body>
 </html>
