--- a/resume/index.html
+++ b/resume/index.html
@@ -16,6 +16,8 @@
         journalism. I'm interested in writing long-form feature stories specifically
         focused on arts, culture and entertainment.After graduation, I plan on
         attending law school.</p>
+    <h2>Experience</h2>
+      
 
   </body>
 </html>
