descriptions and heading for experience heading

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,8 +16,22 @@
         journalism. I'm interested in writing long-form feature stories specifically
         focused on arts, culture and entertainment.After graduation, I plan on
         attending law school.</p>
-    <h2>Experience</h2>
-      
+    <h2>Experience:</h2>
+      <h3>Editor in Chief</h3>
+        <h4>Unwind Magazine</h4>
+          <h5>2020-Present</h5>
+          <p>Manage a staff of writers, general assignment writers,
+              section editors, photo editors and photographers.
+              Previously served as a section editor and photographer for two years.</p>
+      <h3>Staff Writer</h3>
+        <h4>The Luna Collective</h4>
+          <h5>2020-Present</h5>
+          <p>Write and pitch feature stories + profiles about film photographers,
+            bands and musicians for the digital + print editions of this
+            Gen Z centric creative magazine.</p> 
+
+
+
 
   </body>
 </html>
