--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,23 @@
           <h5>2020-Present</h5>
           <p>Write and pitch feature stories + profiles about film photographers,
             bands and musicians for the digital + print editions of this
-            Gen Z centric creative magazine.</p> 
+            Gen Z centric creative magazine.</p>
+      <h3>NewsRoom Intern</h3>
+        <h4>Voice of America</h4>
+          <h5>2020-2021</h5>
+          <p>Worked as an intern for VOA's social media desk. Used Adobe Photoshop
+            and Adobe Spark to create + edit photo galleries, personalized photo posters
+            and photo collages for social media and news stories that are engaging
+            for an international audience. Wrote captions and short news blurbs to
+            supplement photos.</p>
+      <h3>News/Features Intern</h3>
+        <h4>Mid-Atlantic Media</h4>
+          <h5>June 2020-August 2020</h5>
+          <p>Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
+            Magazine. Stories included profile pieces about local events and in-depth
+            feature pieces about community-based initiatives related to the ongoing
+            social justice movements. Also fact-checked and edited freelance
+            stories using AP Style guidelines.</p>  
 
 
 
