--- a/resume/index.html
+++ b/resume/index.html
@@ -44,7 +44,13 @@
             Magazine. Stories included profile pieces about local events and in-depth
             feature pieces about community-based initiatives related to the ongoing
             social justice movements. Also fact-checked and edited freelance
-            stories using AP Style guidelines.</p>  
+            stories using AP Style guidelines.</p>
+      <h3>Diversions Reporter</h3>
+        <h4>The Diamondback</h4>
+          <h5>2018-2021</h5>
+          <p>Wrote and pitched arts and culture stories for this award-winning
+            student run newspaper. Served as writer on the visual arts and
+            music beats.</p>
 
 
 
