--- a/resume/index.html
+++ b/resume/index.html
@@ -51,6 +51,11 @@
           <p>Wrote and pitched arts and culture stories for this award-winning
             student run newspaper. Served as writer on the visual arts and
             music beats.</p>
+    <h2>Education</h2>
+      <ul>
+        <li>High School Diploma, Thomas S. Wootton, 2017</li>
+        <li>B.A., Journalism, University of Maryland, December 2021</li>
+      </ul>
 
 
 
