skills heading and description

--- a/resume/index.html
+++ b/resume/index.html
@@ -56,6 +56,13 @@
         <li>High School Diploma, Thomas S. Wootton, 2017</li>
         <li>B.A., Journalism, University of Maryland, December 2021</li>
       </ul>
+    <h2>Skills</h2>
+      <ul>
+        <li>Photo Editing with Adobe Photoshop</li>
+        <li>Photo Editing with Adobe Lightroom Classic</li>
+        <li>Coversational Bengali</li>
+        <li>Conversational Spanish<li>
+      </ul>
 
 
 
