inserted picture and updated skills list

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>Joy Saha</h1>
+      <img src="C:\Users\Joy Saha\Pictures/profilejoy (2).jpg"
+      alt="A picture of Joy Saha" width="300"/>
       <ul>
         <li>jaitysaha270@gmail.com</li>
         <li><a href="www.linkedin.com/in/joy-saha" target="_blank">LinkedIn</a></li>
@@ -61,11 +63,8 @@
         <li>Photo Editing with Adobe Photoshop</li>
         <li>Photo Editing with Adobe Lightroom Classic</li>
         <li>Coversational Bengali</li>
-        <li>Conversational Spanish<li>
+        <li>Conversational Spanish</li>
       </ul>
-
-
-
 
   </body>
 </html>
