--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,7 @@
       alt="A picture of Joy Saha" width="300"/>
       <ul>
         <li>jaitysaha270@gmail.com</li>
-        <li><a href="www.linkedin.com/in/joy-saha" target="_blank">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a></li>
         <li><a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a></li>
         <li><a href="https://github.com/joysaha101" target="_blank">GitHub</a></li>
       </ul>
