--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,7 @@
     <title>Joy Saha Resume</title>
   </head>
   <body>
+    <!-- I built this myself -->
     <h1>Joy Saha</h1>
       <img src="C:\Users\Joy Saha\Pictures/profilejoy (2).jpg"
       alt="A picture of Joy Saha" width="300"/>
