--- a/resume/index.html
+++ b/resume/index.html
@@ -32,7 +32,7 @@
           <p>Write and pitch feature stories + profiles about film photographers,
             bands and musicians for the digital + print editions of this
             Gen Z centric creative magazine.</p>
-      <h3>NewsRoom Intern</h3>
+      <h3>Newsroom Intern</h3>
         <h4>Voice of America</h4>
           <h5>2020-2021</h5>
           <p>Worked as an intern for VOA's social media desk. Used Adobe Photoshop
