css style for name color and font size

--- a/resume/index.html
+++ b/resume/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <title>Joy Saha Resume</title>
+    <style>
+      h1 {
+        color: blue;
+        font-size: 36px;
+      }
+    </style>
   </head>
   <body>
     <!-- I built this myself -->
     <h1>Joy Saha</h1>
       <img src="C:\Users\Joy Saha\Pictures/profilejoy (2).jpg"
-      alt="A picture of Joy Saha" width="300"/>
+      alt="A picture of Joy Saha" width="300px"/>
       <ul>
         <li>jaitysaha270@gmail.com</li>
         <li><a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a></li>
