--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- I built this myself -->
     <h1>Joy Saha</h1>
-      <img src="C:\Users\Joy Saha\Pictures/profilejoy (2).jpg"
+      <img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px"/>
       <ul>
         <li>jaitysaha270@gmail.com</li>
