--- a/resume/index.html
+++ b/resume/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Joy Saha Resume</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
       h1 {
         color: blue;
