commented out image

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,8 +7,8 @@
   <body>
     <!-- I built this myself -->
     <h1>Joy Saha</h1>
-      <img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
-      alt="A picture of Joy Saha" width="300px"/>
+      <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
+      alt="A picture of Joy Saha" width="300px" -->
       <ul>
         <li>jaitysaha270@gmail.com</li>
         <li><a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a></li>
