--- a/resume/index.html
+++ b/resume/index.html
@@ -16,45 +16,45 @@
         <li><a href="https://github.com/joysaha101" target="_blank">GitHub</a></li>
       </ul>
     <p><strong>Senior Journalism Student</strong></p>
-      <p>I am a current senior at the University of Maryland studying multi-platform
+      I am a current senior at the University of Maryland studying multi-platform
         journalism. I'm interested in writing long-form feature stories specifically
         focused on arts, culture and entertainment.After graduation, I plan on
-        attending law school.</p>
+        attending law school.
     <h2>Experience:</h2>
       <h3>Editor in Chief</h3>
         <h4>Unwind Magazine</h4>
           <h5>2020-Present</h5>
-          <p>Manage a staff of writers, general assignment writers,
+          Manage a staff of writers, general assignment writers,
               section editors, photo editors and photographers.
-              Previously served as a section editor and photographer for two years.</p>
+              Previously served as a section editor and photographer for two years.
       <h3>Staff Writer</h3>
         <h4>The Luna Collective</h4>
           <h5>2020-Present</h5>
-          <p>Write and pitch feature stories + profiles about film photographers,
+          Write and pitch feature stories + profiles about film photographers,
             bands and musicians for the digital + print editions of this
-            Gen Z centric creative magazine.</p>
+            Gen Z centric creative magazine.
       <h3>Newsroom Intern</h3>
         <h4>Voice of America</h4>
           <h5>2020-2021</h5>
-          <p>Worked as an intern for VOA's social media desk. Used Adobe Photoshop
+          Worked as an intern for VOA's social media desk. Used Adobe Photoshop
             and Adobe Spark to create + edit photo galleries, personalized photo posters
             and photo collages for social media and news stories that are engaging
             for an international audience. Wrote captions and short news blurbs to
-            supplement photos.</p>
+            supplement photos.
       <h3>News/Features Intern</h3>
         <h4>Mid-Atlantic Media</h4>
           <h5>June 2020-August 2020</h5>
-          <p>Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
+          Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
             Magazine. Stories included profile pieces about local events and in-depth
             feature pieces about community-based initiatives related to the ongoing
             social justice movements. Also fact-checked and edited freelance
-            stories using AP Style guidelines.</p>
+            stories using AP Style guidelines.
       <h3>Diversions Reporter</h3>
         <h4>The Diamondback</h4>
           <h5>2018-2021</h5>
-          <p>Wrote and pitched arts and culture stories for this award-winning
+          Wrote and pitched arts and culture stories for this award-winning
             student run newspaper. Served as writer on the visual arts and
-            music beats.</p>
+            music beats.
     <h2>Education</h2>
       <ul>
         <li>High School Diploma, Thomas S. Wootton, 2017</li>
