--- a/resume/index.html
+++ b/resume/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <!-- I built this myself -->
-    <h1 class="name">
-      Joy Saha</h1>
+    <h1 class="name">Joy Saha</h1>
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px" -->
       <ul>
