--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <!-- I built this myself -->
+    <div>
     <h1 class="name">Joy Saha</h1>
+    </div>
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px" -->
       <ul>
