--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
   <body>
     <!-- I built this myself -->
     <div>
-    <h1 class="name">Joy Saha</h1>
+      <h1 class="name">Joy Saha</h1>
     </div>
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px" -->
@@ -22,7 +22,9 @@
         journalism. I'm interested in writing long-form feature stories specifically
         focused on arts, culture and entertainment.After graduation, I plan on
         attending law school.
-    <h2>Experience:</h2>
+    <div>
+      <h2>Experience:</h2>
+    </div>
       <h3>Editor in Chief</h3>
         <h4>Unwind Magazine</h4>
           <h5>2020-Present</h5>
@@ -57,12 +59,16 @@
           Wrote and pitched arts and culture stories for this award-winning
             student run newspaper. Served as writer on the visual arts and
             music beats.
-    <h2>Education</h2>
+    <div>
+      <h2>Education</h2>
+    </div>
       <ul>
         <li>High School Diploma, Thomas S. Wootton, 2017</li>
         <li>B.A., Journalism, University of Maryland, December 2021</li>
       </ul>
-    <h2>Skills</h2>
+    <div>
+      <h2>Skills</h2>
+    </div>
       <ul>
         <li>Photo Editing with Adobe Photoshop</li>
         <li>Photo Editing with Adobe Lightroom Classic</li>
