class assigned to heading two

--- a/resume/index.html
+++ b/resume/index.html
@@ -23,7 +23,7 @@
         focused on arts, culture and entertainment.After graduation, I plan on
         attending law school.
     <div>
-      <h2>Experience:</h2>
+      <h2 class="sectionheader">Experience:</h2>
     </div>
       <h3>Editor in Chief</h3>
         <h4>Unwind Magazine</h4>
@@ -60,14 +60,14 @@
             student run newspaper. Served as writer on the visual arts and
             music beats.
     <div>
-      <h2>Education</h2>
+      <h2 class="sectionheader">Education</h2>
     </div>
       <ul>
         <li>High School Diploma, Thomas S. Wootton, 2017</li>
         <li>B.A., Journalism, University of Maryland, December 2021</li>
       </ul>
     <div>
-      <h2>Skills</h2>
+      <h2 class="sectionheader">Skills</h2>
     </div>
       <ul>
         <li>Photo Editing with Adobe Photoshop</li>
