--- a/resume/index.html
+++ b/resume/index.html
@@ -25,19 +25,25 @@
     <div>
       <h2 class="sectionheader">Experience:</h2>
     </div>
+    <div>
       <h3>Editor in Chief</h3>
+    </div>
         <h4>Unwind Magazine</h4>
           <h5>2020-Present</h5>
           Manage a staff of writers, general assignment writers,
               section editors, photo editors and photographers.
               Previously served as a section editor and photographer for two years.
+    <div>
       <h3>Staff Writer</h3>
+    </div>
         <h4>The Luna Collective</h4>
           <h5>2020-Present</h5>
           Write and pitch feature stories + profiles about film photographers,
             bands and musicians for the digital + print editions of this
             Gen Z centric creative magazine.
+    <div>
       <h3>Newsroom Intern</h3>
+    </div>
         <h4>Voice of America</h4>
           <h5>2020-2021</h5>
           Worked as an intern for VOA's social media desk. Used Adobe Photoshop
@@ -45,7 +51,9 @@
             and photo collages for social media and news stories that are engaging
             for an international audience. Wrote captions and short news blurbs to
             supplement photos.
+    <div>
       <h3>News/Features Intern</h3>
+    </div>
         <h4>Mid-Atlantic Media</h4>
           <h5>June 2020-August 2020</h5>
           Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
@@ -53,7 +61,9 @@
             feature pieces about community-based initiatives related to the ongoing
             social justice movements. Also fact-checked and edited freelance
             stories using AP Style guidelines.
+    <div>
       <h3>Diversions Reporter</h3>
+    </div>
         <h4>The Diamondback</h4>
           <h5>2018-2021</h5>
           Wrote and pitched arts and culture stories for this award-winning
