--- a/resume/index.html
+++ b/resume/index.html
@@ -26,25 +26,31 @@
       <h2 class="sectionheader">Experience:</h2>
     </div>
     <div>
-      <h3>Editor in Chief</h3>
+      <h3 class="jobtitle">Editor in Chief</h3>
     </div>
-        <h4>Unwind Magazine</h4>
+    <div>
+        <h4 class="organization">Unwind Magazine</h4>
+    </div>
           <h5>2020-Present</h5>
           Manage a staff of writers, general assignment writers,
               section editors, photo editors and photographers.
               Previously served as a section editor and photographer for two years.
     <div>
-      <h3>Staff Writer</h3>
+      <h3 class="jobtitle">Staff Writer</h3>
     </div>
-        <h4>The Luna Collective</h4>
+    <div>
+        <h4 class="organization">The Luna Collective</h4>
+    </div>
           <h5>2020-Present</h5>
           Write and pitch feature stories + profiles about film photographers,
             bands and musicians for the digital + print editions of this
             Gen Z centric creative magazine.
     <div>
-      <h3>Newsroom Intern</h3>
+      <h3 class="jobtitle">Newsroom Intern</h3>
     </div>
-        <h4>Voice of America</h4>
+    <div>
+        <h4 class="organization">Voice of America</h4>
+    </div>
           <h5>2020-2021</h5>
           Worked as an intern for VOA's social media desk. Used Adobe Photoshop
             and Adobe Spark to create + edit photo galleries, personalized photo posters
@@ -52,9 +58,11 @@
             for an international audience. Wrote captions and short news blurbs to
             supplement photos.
     <div>
-      <h3>News/Features Intern</h3>
+      <h3 class="jobtitle">News/Features Intern</h3>
     </div>
-        <h4>Mid-Atlantic Media</h4>
+    <div>
+        <h4 class="organization">Mid-Atlantic Media</h4>
+    </div>
           <h5>June 2020-August 2020</h5>
           Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
             Magazine. Stories included profile pieces about local events and in-depth
@@ -62,9 +70,11 @@
             social justice movements. Also fact-checked and edited freelance
             stories using AP Style guidelines.
     <div>
-      <h3>Diversions Reporter</h3>
+      <h3 class="jobtitle">Diversions Reporter</h3>
     </div>
-        <h4>The Diamondback</h4>
+    <div>
+        <h4 class="organization">The Diamondback</h4>
+    </div>
           <h5>2018-2021</h5>
           Wrote and pitched arts and culture stories for this award-winning
             student run newspaper. Served as writer on the visual arts and
