--- a/resume/index.html
+++ b/resume/index.html
@@ -17,11 +17,11 @@
         <li><a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a></li>
         <li><a href="https://github.com/joysaha101" target="_blank">GitHub</a></li>
       </ul>
-    <p><strong>Senior Journalism Student</strong></p>
+    <p class="description"><strong>Senior Journalism Student</strong></p>
       I am a current senior at the University of Maryland studying multi-platform
-        journalism. I'm interested in writing long-form feature stories specifically
-        focused on arts, culture and entertainment.After graduation, I plan on
-        attending law school.
+      journalism. I'm interested in writing long-form feature stories specifically
+      focused on arts, culture and entertainment.After graduation, I plan on
+      attending law school.
     <div>
       <h2 class="sectionheader">Experience:</h2>
     </div>
@@ -31,54 +31,64 @@
     <div>
         <h4 class="organization">Unwind Magazine</h4>
     </div>
-          <h5>2020-Present</h5>
+    <div>
+          <h5 class="date">2020-Present</h5>
+    </div>
           Manage a staff of writers, general assignment writers,
-              section editors, photo editors and photographers.
-              Previously served as a section editor and photographer for two years.
+          section editors, photo editors and photographers.
+          Previously served as a section editor and photographer for two years.
     <div>
       <h3 class="jobtitle">Staff Writer</h3>
     </div>
     <div>
         <h4 class="organization">The Luna Collective</h4>
     </div>
-          <h5>2020-Present</h5>
+    <div>
+          <h5 class="date">2020-Present</h5>
+    </div>
           Write and pitch feature stories + profiles about film photographers,
-            bands and musicians for the digital + print editions of this
-            Gen Z centric creative magazine.
+          bands and musicians for the digital + print editions of this
+          Gen Z centric creative magazine.
     <div>
       <h3 class="jobtitle">Newsroom Intern</h3>
     </div>
     <div>
         <h4 class="organization">Voice of America</h4>
     </div>
-          <h5>2020-2021</h5>
+    <div>
+          <h5 class="date">2020-2021</h5>
+    </div>
           Worked as an intern for VOA's social media desk. Used Adobe Photoshop
-            and Adobe Spark to create + edit photo galleries, personalized photo posters
-            and photo collages for social media and news stories that are engaging
-            for an international audience. Wrote captions and short news blurbs to
-            supplement photos.
+          and Adobe Spark to create + edit photo galleries, personalized photo posters
+          and photo collages for social media and news stories that are engaging
+          for an international audience. Wrote captions and short news blurbs to
+          supplement photos.
     <div>
       <h3 class="jobtitle">News/Features Intern</h3>
     </div>
     <div>
         <h4 class="organization">Mid-Atlantic Media</h4>
     </div>
-          <h5>June 2020-August 2020</h5>
+    <div>
+          <h5 class="date">June 2020-August 2020</h5>
+    </div>
           Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
-            Magazine. Stories included profile pieces about local events and in-depth
-            feature pieces about community-based initiatives related to the ongoing
-            social justice movements. Also fact-checked and edited freelance
-            stories using AP Style guidelines.
+          Magazine. Stories included profile pieces about local events and in-depth
+          feature pieces about community-based initiatives related to the ongoing
+          social justice movements. Also fact-checked and edited freelance
+          stories using AP Style guidelines.
     <div>
       <h3 class="jobtitle">Diversions Reporter</h3>
     </div>
     <div>
         <h4 class="organization">The Diamondback</h4>
     </div>
-          <h5>2018-2021</h5>
+    <div>
+          <h5 class="date">2018-2021</h5>
+    </div>
           Wrote and pitched arts and culture stories for this award-winning
-            student run newspaper. Served as writer on the visual arts and
-            music beats.
+          student run newspaper. Served as writer on the visual arts and
+          music beats.
     <div>
       <h2 class="sectionheader">Education</h2>
     </div>
