--- a/resume/index.html
+++ b/resume/index.html
@@ -34,9 +34,10 @@
     <div>
           <h5 class="date">2020-Present</h5>
     </div>
-          Manage a staff of writers, general assignment writers,
+        <p> Manage a staff of writers, general assignment writers,
           section editors, photo editors and photographers.
           Previously served as a section editor and photographer for two years.
+        </p>
     <div>
       <h3 class="jobtitle">Staff Writer</h3>
     </div>
