--- a/resume/index.html
+++ b/resume/index.html
@@ -34,10 +34,10 @@
     <div>
           <h5 class="date">2020-Present</h5>
     </div>
-        <p> Manage a staff of writers, general assignment writers,
+        Manage a staff of writers, general assignment writers,
           section editors, photo editors and photographers.
           Previously served as a section editor and photographer for two years.
-        </p>
+
     <div>
       <h3 class="jobtitle">Staff Writer</h3>
     </div>
@@ -48,8 +48,8 @@
           <h5 class="date">2020-Present</h5>
     </div>
           Write and pitch feature stories + profiles about film photographers,
-          bands and musicians for the digital + print editions of this
-          Gen Z centric creative magazine.
+            bands and musicians for the digital + print editions of this
+            Gen Z centric creative magazine.
     <div>
       <h3 class="jobtitle">Newsroom Intern</h3>
     </div>
@@ -60,10 +60,10 @@
           <h5 class="date">2020-2021</h5>
     </div>
           Worked as an intern for VOA's social media desk. Used Adobe Photoshop
-          and Adobe Spark to create + edit photo galleries, personalized photo posters
-          and photo collages for social media and news stories that are engaging
-          for an international audience. Wrote captions and short news blurbs to
-          supplement photos.
+            and Adobe Spark to create + edit photo galleries, personalized photo posters
+            and photo collages for social media and news stories that are engaging
+            for an international audience. Wrote captions and short news blurbs to
+            supplement photos.
     <div>
       <h3 class="jobtitle">News/Features Intern</h3>
     </div>
@@ -74,10 +74,10 @@
           <h5 class="date">June 2020-August 2020</h5>
     </div>
           Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
-          Magazine. Stories included profile pieces about local events and in-depth
-          feature pieces about community-based initiatives related to the ongoing
-          social justice movements. Also fact-checked and edited freelance
-          stories using AP Style guidelines.
+            Magazine. Stories included profile pieces about local events and in-depth
+            feature pieces about community-based initiatives related to the ongoing
+            social justice movements. Also fact-checked and edited freelance
+            stories using AP Style guidelines.
     <div>
       <h3 class="jobtitle">Diversions Reporter</h3>
     </div>
@@ -88,8 +88,8 @@
           <h5 class="date">2018-2021</h5>
     </div>
           Wrote and pitched arts and culture stories for this award-winning
-          student run newspaper. Served as writer on the visual arts and
-          music beats.
+            student run newspaper. Served as writer on the visual arts and
+            music beats.
     <div>
       <h2 class="sectionheader">Education</h2>
     </div>
