--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
     </div>
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px" -->
-      <ul>
+      <ul class="menu">
         <li>jaitysaha270@gmail.com</li>
         <li><a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a></li>
         <li><a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a></li>
