--- a/resume/index.html
+++ b/resume/index.html
@@ -93,7 +93,7 @@
     <div>
       <h2 class="sectionheader">Education</h2>
     </div>
-      <ul>
+      <ul id="degrees">
         <li>High School Diploma, Thomas S. Wootton, 2017</li>
         <li>B.A., Journalism, University of Maryland, December 2021</li>
       </ul>
