--- a/resume/index.html
+++ b/resume/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <!-- I built this myself -->
-    <div>
-      <h1 class="name">Joy Saha</h1>
+    <div class="name">
+      <h1>Joy Saha</h1>
     </div>
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px" -->
