--- a/resume/index.html
+++ b/resume/index.html
@@ -22,8 +22,8 @@
       journalism. I'm interested in writing long-form feature stories specifically
       focused on arts, culture and entertainment.After graduation, I plan on
       attending law school.
-    <div>
-      <h2 class="sectionheader">Experience:</h2>
+    <div class="sectionheader">
+      <h2>Experience:</h2>
     </div>
     <div>
       <h3 class="jobtitle">Editor in Chief</h3>
@@ -90,15 +90,15 @@
           Wrote and pitched arts and culture stories for this award-winning
             student run newspaper. Served as writer on the visual arts and
             music beats.
-    <div>
-      <h2 class="sectionheader">Education</h2>
+    <div class="sectionheader">
+      <h2>Education</h2>
     </div>
       <ul id="degrees">
         <li>High School Diploma, Thomas S. Wootton, 2017</li>
         <li>B.A., Journalism, University of Maryland, December 2021</li>
       </ul>
-    <div>
-      <h2 class="sectionheader">Skills</h2>
+    <div class="sectionheader">
+      <h2>Skills</h2>
     </div>
       <ul id="do">
         <li>Photo Editing with Adobe Photoshop</li>
