--- a/resume/index.html
+++ b/resume/index.html
@@ -25,8 +25,8 @@
     <div class="sectionheader">
       <h2>Experience:</h2>
     </div>
-    <div>
-      <h3 class="jobtitle">Editor in Chief</h3>
+    <div class="jobtitle">
+      <h3>Editor in Chief</h3>
     </div>
     <div>
         <h4 class="organization">Unwind Magazine</h4>
@@ -38,8 +38,8 @@
           section editors, photo editors and photographers.
           Previously served as a section editor and photographer for two years.
 
-    <div>
-      <h3 class="jobtitle">Staff Writer</h3>
+    <div class="jobtitle">
+      <h3>Staff Writer</h3>
     </div>
     <div>
         <h4 class="organization">The Luna Collective</h4>
@@ -50,8 +50,8 @@
           Write and pitch feature stories + profiles about film photographers,
             bands and musicians for the digital + print editions of this
             Gen Z centric creative magazine.
-    <div>
-      <h3 class="jobtitle">Newsroom Intern</h3>
+    <div class="jobtitle">
+      <h3>Newsroom Intern</h3>
     </div>
     <div>
         <h4 class="organization">Voice of America</h4>
@@ -64,8 +64,8 @@
             and photo collages for social media and news stories that are engaging
             for an international audience. Wrote captions and short news blurbs to
             supplement photos.
-    <div>
-      <h3 class="jobtitle">News/Features Intern</h3>
+    <div class="jobtitle">
+      <h3>News/Features Intern</h3>
     </div>
     <div>
         <h4 class="organization">Mid-Atlantic Media</h4>
@@ -78,8 +78,8 @@
             feature pieces about community-based initiatives related to the ongoing
             social justice movements. Also fact-checked and edited freelance
             stories using AP Style guidelines.
-    <div>
-      <h3 class="jobtitle">Diversions Reporter</h3>
+    <div class="jobtitle">
+      <h3>Diversions Reporter</h3>
     </div>
     <div>
         <h4 class="organization">The Diamondback</h4>
