--- a/resume/index.html
+++ b/resume/index.html
@@ -28,11 +28,11 @@
     <div class="jobtitle">
       <h3>Editor in Chief</h3>
     </div>
-    <div>
-        <h4 class="organization">Unwind Magazine</h4>
+    <div class="organization">
+        <h4>Unwind Magazine</h4>
     </div>
-    <div>
-          <h5 class="date">2020-Present</h5>
+    <div class="date">
+          <h5>2020-Present</h5>
     </div>
         Manage a staff of writers, general assignment writers,
           section editors, photo editors and photographers.
@@ -41,11 +41,11 @@
     <div class="jobtitle">
       <h3>Staff Writer</h3>
     </div>
-    <div>
-        <h4 class="organization">The Luna Collective</h4>
+    <div class="organization">
+        <h4>The Luna Collective</h4>
     </div>
-    <div>
-          <h5 class="date">2020-Present</h5>
+    <div class="date">
+          <h5>2020-Present</h5>
     </div>
           Write and pitch feature stories + profiles about film photographers,
             bands and musicians for the digital + print editions of this
@@ -53,11 +53,11 @@
     <div class="jobtitle">
       <h3>Newsroom Intern</h3>
     </div>
-    <div>
-        <h4 class="organization">Voice of America</h4>
+    <div class="organization">
+        <h4>Voice of America</h4>
     </div>
-    <div>
-          <h5 class="date">2020-2021</h5>
+    <div class="date">
+          <h5>2020-2021</h5>
     </div>
           Worked as an intern for VOA's social media desk. Used Adobe Photoshop
             and Adobe Spark to create + edit photo galleries, personalized photo posters
@@ -67,11 +67,11 @@
     <div class="jobtitle">
       <h3>News/Features Intern</h3>
     </div>
-    <div>
-        <h4 class="organization">Mid-Atlantic Media</h4>
+    <div class="organization">
+        <h4>Mid-Atlantic Media</h4>
     </div>
-    <div>
-          <h5 class="date">June 2020-August 2020</h5>
+    <div class="date">
+          <h5>June 2020-August 2020</h5>
     </div>
           Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
             Magazine. Stories included profile pieces about local events and in-depth
@@ -81,11 +81,11 @@
     <div class="jobtitle">
       <h3>Diversions Reporter</h3>
     </div>
-    <div>
-        <h4 class="organization">The Diamondback</h4>
+    <div class="organization">
+        <h4>The Diamondback</h4>
     </div>
-    <div>
-          <h5 class="date">2018-2021</h5>
+    <div class="date">
+          <h5>2018-2021</h5>
     </div>
           Wrote and pitched arts and culture stories for this award-winning
             student run newspaper. Served as writer on the visual arts and
