--- a/resume/index.html
+++ b/resume/index.html
@@ -17,7 +17,9 @@
         <li><a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a></li>
         <li><a href="https://github.com/joysaha101" target="_blank">GitHub</a></li>
       </ul>
-    <p class="description"><strong id="title">Senior Journalism Student</strong></p>
+    <p class="description">
+      <div id="title"><strong>Senior Journalism Student</strong></div>
+    </p>
       I am a current senior at the University of Maryland studying multi-platform
       journalism. I'm interested in writing long-form feature stories specifically
       focused on arts, culture and entertainment.After graduation, I plan on
