--- a/resume/index.html
+++ b/resume/index.html
@@ -20,12 +20,11 @@
     <p class="description">
       <div id="title"><strong><p>Senior Journalism Student</p></strong></div>
     </p>
-    <p class="top">
+    <class="top">
         I am a current senior at the University of Maryland studying multi-platform
       journalism. I'm interested in writing long-form feature stories specifically
       focused on arts, culture and entertainment.After graduation, I plan on
       attending law school.
-    </p>
     <div class="sectionheader">
       <h2>Experience:</h2>
     </div>
