--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@
     <p class="description">
       <div id="title"><strong><p>Senior Journalism Student</p></strong></div>
     </p>
-    <p id="top">
+    <p class="top">
         I am a current senior at the University of Maryland studying multi-platform
       journalism. I'm interested in writing long-form feature stories specifically
       focused on arts, culture and entertainment.After graduation, I plan on
