--- a/resume/index.html
+++ b/resume/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div id="container">
     <!-- I built this myself -->
     <div class="name">
       <h1>Joy Saha</h1>
@@ -109,6 +110,6 @@
         <li>Coversational Bengali</li>
         <li>Conversational Spanish</li>
       </ul>
-
+    </div>
   </body>
 </html>
