--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
         <li><a href="https://github.com/joysaha101" target="_blank">GitHub</a></li>
       </ul>
     <p class="description">
-      <div id="title"><strong><p>Senior Journalism Student</p></strong></div>
+      <div id="title"><strong>Senior Journalism Student</strong></div>
     </p>
     <p class="top">
         I am a current senior at the University of Maryland studying multi-platform
