--- a/resume/index.html
+++ b/resume/index.html
@@ -38,10 +38,11 @@
     <div class="date">
           <h5>2020-Present</h5>
     </div>
+    <p class="description">
         Manage a staff of writers, general assignment writers,
           section editors, photo editors and photographers.
           Previously served as a section editor and photographer for two years.
-
+    </p>
     <div class="jobtitle">
       <h3>Staff Writer</h3>
     </div>
