--- a/resume/index.html
+++ b/resume/index.html
@@ -60,9 +60,11 @@
             <h5>2020-Present</h5>
           </div>
 
+      <p class="description">
           Write and pitch feature stories + profiles about film photographers,
             bands and musicians for the digital + print editions of this
             Gen Z centric creative magazine.
+      </p>
 
       <div class="jobtitle">
         <h3>Newsroom Intern</h3>
@@ -76,11 +78,13 @@
             <h5>2020-2021</h5>
           </div>
 
+        <p class="description">
           Worked as an intern for VOA's social media desk. Used Adobe Photoshop
             and Adobe Spark to create + edit photo galleries, personalized photo posters
             and photo collages for social media and news stories that are engaging
             for an international audience. Wrote captions and short news blurbs to
             supplement photos.
+        </p>
 
       <div class="jobtitle">
         <h3>News/Features Intern</h3>
@@ -94,11 +98,13 @@
             <h5>June 2020-August 2020</h5>
           </div>
 
+        <p class="description">
           Wrote and pitched stories for Washington FAMILY Magazine and Montgomery
             Magazine. Stories included profile pieces about local events and in-depth
             feature pieces about community-based initiatives related to the ongoing
             social justice movements. Also fact-checked and edited freelance
             stories using AP Style guidelines.
+        </p>
 
       <div class="jobtitle">
         <h3>Diversions Reporter</h3>
@@ -111,10 +117,12 @@
           <div class="date">
             <h5>2018-2021</h5>
           </div>
-
+          
+        <p class="description">
           Wrote and pitched arts and culture stories for this award-winning
             student run newspaper. Served as writer on the visual arts and
             music beats.
+        </p>
 
     <div class="sectionheader">
       <h2>Education</h2>
