--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@
       </ul>
     <div id="title"><strong>Senior Journalism Student</strong></div>
 
-    <p class="top">
+    <p class=" description top">
         I am a current senior at the University of Maryland studying multi-platform
       journalism. I'm interested in writing long-form feature stories specifically
       focused on arts, culture and entertainment.After graduation, I plan on
@@ -117,7 +117,7 @@
           <div class="date">
             <h5>2018-2021</h5>
           </div>
-          
+
         <p class="description">
           Wrote and pitched arts and culture stories for this award-winning
             student run newspaper. Served as writer on the visual arts and
