--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="container">
     <!-- I built this myself -->
-    <div class="name">
+    <div id="name">
       <h1>Joy Saha</h1>
     </div>
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
