--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,7 @@
     <div id="container">
     <!-- I built this myself -->
     <div id="name">
-      <h1>Joy Saha</h1>
+      Joy Saha
     </div>
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px" -->
@@ -27,7 +27,7 @@
       attending law school. </p>
 
     <div class="sectionheader">
-      <h2>Experience:</h2>
+      Experience:
     </div>
 
       <div class="jobtitle">
@@ -125,7 +125,7 @@
         </p>
 
     <div class="sectionheader">
-      <h2>Education</h2>
+      Education
     </div>
 
       <ul id="degrees">
@@ -134,7 +134,7 @@
       </ul>
 
     <div class="sectionheader">
-      <h2>Skills</h2>
+      Skills
     </div>
 
       <ul id="do">
