--- a/resume/index.html
+++ b/resume/index.html
@@ -31,15 +31,15 @@
     </div>
 
       <div class="jobtitle">
-        <h3>Editor in Chief</h3>
+        Editor In Chief
       </div>
 
         <div class="organization">
-          <h4>Unwind Magazine</h4>
+            Unwind Magazine
         </div>
 
           <div class="date">
-            <h5>2020-Present</h5>
+              2020-Present
           </div>
 
     <p class="description">
@@ -49,15 +49,15 @@
     </p>
 
       <div class="jobtitle">
-        <h3>Staff Writer</h3>
+        Staff Writer
       </div>
 
         <div class="organization">
-          <h4>The Luna Collective</h4>
+            The Luna Collective
         </div>
 
           <div class="date">
-            <h5>2020-Present</h5>
+              2020-Present
           </div>
 
       <p class="description">
@@ -67,15 +67,15 @@
       </p>
 
       <div class="jobtitle">
-        <h3>Newsroom Intern</h3>
+        Newsroom Intern
       </div>
 
         <div class="organization">
-          <h4>Voice of America</h4>
+            Voice of America
         </div>
 
           <div class="date">
-            <h5>2020-2021</h5>
+              2020-2021
           </div>
 
         <p class="description">
@@ -87,15 +87,15 @@
         </p>
 
       <div class="jobtitle">
-        <h3>News/Features Intern</h3>
+        News/Features Intern
       </div>
 
         <div class="organization">
-          <h4>Mid-Atlantic Media</h4>
+            Mid-Atlantic Media
         </div>
 
           <div class="date">
-            <h5>June 2020-August 2020</h5>
+              June 2020-August 2020
           </div>
 
         <p class="description">
@@ -107,15 +107,15 @@
         </p>
 
       <div class="jobtitle">
-        <h3>Diversions Reporter</h3>
+        Diversions Reporter
       </div>
 
         <div class="organization">
-          <h4>The Diamondback</h4>
+            The Diamondback
         </div>
 
           <div class="date">
-            <h5>2018-2021</h5>
+              2018-2021
           </div>
 
         <p class="description">
