--- a/resume/index.html
+++ b/resume/index.html
@@ -13,10 +13,10 @@
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px" -->
       <ul class="menu">
-        <li>jaitysaha270@gmail.com</li>
-        <li><a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a></li>
-        <li><a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a></li>
-        <li><a href="https://github.com/joysaha101" target="_blank">GitHub</a></li>
+        jaitysaha270@gmail.com
+        <a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a>
+        <a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter
+        <a href="https://github.com/joysaha101" target="_blank">GitHub</a>
       </ul>
     <div id="title"><strong>Senior Journalism Student</strong></div>
 
