--- a/resume/index.html
+++ b/resume/index.html
@@ -18,7 +18,7 @@
         <a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter
         <a href="https://github.com/joysaha101" target="_blank">GitHub</a>
       </ul>
-    <div id="title"><strong>Senior Journalism Student</strong></div>
+    <div id="title">Senior Journalism Student</div>
 
     <p class=" description top">
         I am a current senior at the University of Maryland studying multi-platform
