--- a/resume/index.html
+++ b/resume/index.html
@@ -7,9 +7,7 @@
   <body>
     <div id="container">
     <!-- I built this myself -->
-    <div id="name">
-      Joy Saha
-    </div>
+    <div id="name">Joy Saha</div>
       <!-- img src="C:\Users\Joy Saha\Documents\GitHub\Joy-Saha-Jour352\resume"
       alt="A picture of Joy Saha" width="300px" -->
       <ul class="menu">
