--- a/indexmidtermpractice.html
+++ b/indexmidtermpractice.html
@@ -16,7 +16,7 @@
     </div>
 
 <p>
-  As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Amiri looked at an astronomy book with a photograph of Andromeda, the giant galaxy neighboring our Milky Way.
+As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Amiri looked at an astronomy book with a photograph of Andromeda, the giant galaxy neighboring our Milky Way.
 
 “I can’t describe it,” Ms. al-Amiri said in an interview, “but just to realize that something that was printed on a page was larger than anything that I’ve ever seen and dwarfs the planet that I live on.” <hr>
 
@@ -47,10 +47,12 @@ About the size of a Mini Cooper car, Hope is to arrive in orbit around Mars in F
 From its high orbit — varying from 12,400 miles to 27,000 miles above the surface — Hope will give planetary scientists their first global view of Martian weather at all times of day. Over its two-year mission, it will investigate how dust storms and other weather phenomena near the Martian surface speed or slow the loss of the planet’s atmosphere into space.
 
 That, however, is not the main reason that the Emirates government built Hope. <hr>
+
 <figure>
   <img src="C:\Users\Joy Saha\Pictures\SahaLayout\Images/uae-mars1.jpg" alt="woman portrait" width="900" height="600"><br>
   <figcaption> Sarah al-Amiri is the head of science operations and the deputy project manager for the Emirates Mars Mission, the U.A.E.’s first space mission. <i>(The New York Times)</i></figcaption>
 </figure>
+
 “A lot of you might ask us, ‘Why space?’” Omran Sharaf, the Hope project manager, said during a news conference on Thursday. “It’s not about reaching Mars.”
 
 Rather, Mr. Sharaf said, the country’s primary aim is to inspire schoolchildren and spur its science and technology industries, which, in turn, will enable the Emirates to tackle critical issues like food, water, energy and a post-petroleum economy.<hr>
@@ -66,10 +68,12 @@ For the Mars mission, the country took a similar approach to the earlier satelli
 By design, Emirati engineers worked side by side with their counterparts in Boulder, learning as they designed and assembled the spacecraft. “One of the requirements that the government gave us since the beginning,” Mr. Sharaf said, “they told us, ‘You have to build it and not buy it.’”
 
 The science piece of the mission was an even bigger gap to fill for a country without Mars scientists, which until recently constituted an unfathomable career choice. <hr>
+
 <figure>
   <img src="C:\Users\Joy Saha\Pictures\SahaLayout\Images/uae-mars2.jpg" alt="man and woman standing in front of moon" width="900" height="600"><br>
   <figcaption>Ms. al-Amiri, right, and Omran Sharaf, the Hope project manager, during a 2015 ceremony in Dubai to unveil the mission. <i>(The New York Times)</i></figcaption>
 </figure>
+
 Ms. al-Amiri is the head of science even though she never formally studied planetary science. After she graduated college with a computer science degree, the likeliest job prospects — working at a networking company performing troubleshooting and maintenance — did not enrapture her. She wanted to design and build new things.
 
 She saw a job posting at what is now known as the Mohammed bin Rashid Space Center in Dubai. She joined in 2009, working as an engineer on the satellite programs. When that assignment wrapped up in 2014, she moved on to her current roles on the Hope mission.
@@ -79,10 +83,12 @@ She now also serves as the country’s minister of state for advanced sciences a
 If the U.A.E. had tried to train planetary scientists from scratch to work on Hope, the mission would have been long over before the scientists were ready. Instead, Emirati officials took a quicker approach: converting some of the space center’s engineers into scientists by offering apprentice-like training with researchers in the United States. <hr>
 
 “I was put there to develop scientific talents within the organization and be able to transfer knowledge in a nontraditional way,” Ms. al-Amiri said.<hr>
+
 <figure>
   <img src="C:\Users\Joy Saha\Pictures\SahaLayout\Images/uae-mars3.jpg" alt="space gadget" width="900" height="600"><br>
   <figcaption>Engineers at work on the Hope spacecraft. <i>(The New York Times)</i></figcaption>
 </figure>
+
 The coronavirus outbreak tossed in more challenges. Once construction of the spacecraft was complete in Colorado, a large Ukrainian transport plane ferried it to Dubai, where it was to undergo a round of testing before heading to the launchpad in Japan.
 
 But at the end of February — not long before the European Space Agency and Russia postponed the launch of the Rosalind Franklin mission in part because of the logistical hurdles created by the pandemic — Mr. Sharaf and Ms. al-Amiri realized the outbreak could disrupt their carefully planned schedules if airports were shut down. <hr>
@@ -101,7 +107,7 @@ Mr. Sharaf and Ms. al-Amiri said the mission was now ready, and the nation’s s
 
 The greatest success is the training of the people, he said.
 
-“For the Emirates, it’s more about the journey,” Mr. Sharaf said. “It’s more about the impact. Reaching there is one of the goals. But that doesn’t mean that the mission has failed, if we didn’t manage to get there. So failure is an option.” <hr>
+“For the Emirates, it’s more about the journey,” Mr. Sharaf said. “It’s more about the impact. Reaching there is one of the goals. But that doesn’t mean that the mission has failed, if we didn’t manage to get there. So failure is an option.”
 </p>
 
   <h2>Read More</h2>
