--- a/indexmidtermpractice.html
+++ b/indexmidtermpractice.html
@@ -49,7 +49,7 @@ From its high orbit — varying from 12,400 miles to 27,000 miles above the surf
 That, however, is not the main reason that the Emirates government built Hope. <hr>
 
 <figure>
-  <img src="C:\Users\Joy Saha\Pictures\SahaLayout\Images/uae-mars1.jpg" alt="woman portrait" width="900" height="600"><br>
+  <img src="uae-mars1.jpg" alt="woman portrait" width="900" height="600"><br>
   <figcaption> Sarah al-Amiri is the head of science operations and the deputy project manager for the Emirates Mars Mission, the U.A.E.’s first space mission. <i>(The New York Times)</i></figcaption>
 </figure>
 
