--- a/indexmidtermpractice.html
+++ b/indexmidtermpractice.html
@@ -70,7 +70,7 @@ By design, Emirati engineers worked side by side with their counterparts in Boul
 The science piece of the mission was an even bigger gap to fill for a country without Mars scientists, which until recently constituted an unfathomable career choice. <hr>
 
 <figure>
-  <img src="C:\Users\Joy Saha\Pictures\SahaLayout\Images/uae-mars2.jpg" alt="man and woman standing in front of moon" width="900" height="600"><br>
+  <img src="uae-mars2.jpg" alt="man and woman standing in front of moon" width="900" height="600"><br>
   <figcaption>Ms. al-Amiri, right, and Omran Sharaf, the Hope project manager, during a 2015 ceremony in Dubai to unveil the mission. <i>(The New York Times)</i></figcaption>
 </figure>
 
@@ -85,7 +85,7 @@ If the U.A.E. had tried to train planetary scientists from scratch to work on Ho
 “I was put there to develop scientific talents within the organization and be able to transfer knowledge in a nontraditional way,” Ms. al-Amiri said.<hr>
 
 <figure>
-  <img src="C:\Users\Joy Saha\Pictures\SahaLayout\Images/uae-mars3.jpg" alt="space gadget" width="900" height="600"><br>
+  <img src="uae-mars3.jpg" alt="space gadget" width="900" height="600"><br>
   <figcaption>Engineers at work on the Hope spacecraft. <i>(The New York Times)</i></figcaption>
 </figure>
 
