--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -5,7 +5,11 @@
     <title></title>
   </head>
 
-    <body>
+  <body>
+    <p>Before the final whistle, before the chants of “Equal pay!” ricocheted around Stade de Lyon, before Megan Rapinoe’s
+      arms were filled with all the trophies a soccer player could possibly earn in one year, first came the tears.<br><br><br></p>
+
+    
 
 
 
@@ -21,6 +25,8 @@
 
 
 
-    </body>
+
+
+  </body>
 
 </html>
