heading two one

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -44,6 +44,8 @@
 
       <p>As for The Pose? “It was kind of like a ‘F--- you,’ but with a big smile and a s--- eating grin,” Rapinoe says. “You are not going to steal any of our joy.”<br><br></p>
 
+    <h2>Sportsperson of the Year</h2>
+
       <p>Yes, the U.S. women have been here before. But the ’19ers were more dominant than the team that won four years ago—they never trailed in France; they scored a record 26 goals—and they were even
       bolder than the ’99ers who collectively captured SI’s year-end award two decades ago. Julie Foudy, co-captain of that team, asked her old cohort Mia Hamm about the equal-pay lawsuit,
       “Do you think we would’ve done this?” And Foudy says they concluded, “We probably would have said, Let’s plant that flag after we’ve won. We had been socialized not to stir the pot.
