css for paragraph

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -7,6 +7,7 @@
 
   <body>
     <h1>The Story of Megan Rapinoe, Hero of the World Cup</h1>
+
       <p>Before the final whistle, before the chants of “Equal pay!” ricocheted around Stade de Lyon, before Megan Rapinoe’s
       arms were filled with all the trophies a soccer player could possibly earn in one year, first came the tears.<br><br></p>
 
@@ -87,6 +88,8 @@
       It’s her way of poking fun at this temporary status; she knows how easily the cheers can turn to boos.<br><br></p>
 
       <p>Megan Rapinoe is Sportsperson of the Year, though, not because of her newfound fame but because of how she’s handled it. She owned the biggest moment of her life and silenced all the doubts. Except, perhaps, her own.<br><br></p>
+
+    <h2> Standing up for what you believe</h2>
 
       <p>It’s early November and Rapinoe is standing on a frosty field in Greenwich, Conn., popping cough drops to combat a cold she picked up after having spent maybe three days at home in the last month. She and Rachael held a soccer clinic in Farming­ville, N.Y., last night;
       today they have two more sold-out sessions, 175 kids each, before Megan will rush to catch a flight to Columbus for the last national team camp of the year. Denise and the twins’ Aunt Melissa are working the check-in desk, and there’s no security here—which is fine,
