masthead div class

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -6,6 +6,11 @@
   </head>
 
   <body>
+
+    <div class="masthead">
+      From the Pitch to the Page
+    </div>
+
     <h1>The Story of Megan Rapinoe, Hero of the World Cup</h1>
 
       <p>Before the final whistle, before the chants of “Equal pay!” ricocheted around Stade de Lyon, before Megan Rapinoe’s
