image and css added

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -13,6 +13,11 @@
 
     <h1>The Story of Megan Rapinoe, Hero of the World Cup</h1>
 
+    <figure>
+      <img src="rapinoe1.jpg" alt="megan rapinoe portrait" width="900" height="500"><br>
+      <figcaption>Megan Rapinoe is Sports Illustrated's 2019 Sportsperson of the Year</figcaption>
+    </figure>
+
       <p>Before the final whistle, before the chants of “Equal pay!” ricocheted around Stade de Lyon, before Megan Rapinoe’s
       arms were filled with all the trophies a soccer player could possibly earn in one year, first came the tears.<br><br></p>
 
