--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -14,8 +14,8 @@
     <h1>The Story of Megan Rapinoe, Hero of the World Cup</h1>
 
     <figure>
-      <img src="rapinoe1.jpg" alt="megan rapinoe portrait" width="900" height="500"><br>
-      <figcaption>Megan Rapinoe is Sports Illustrated's 2019 Sportsperson of the Year</figcaption>
+      <img src="rapinoe1.jpg" alt="megan rapinoe portrait" width="900" height="550"><br>
+      <figcaption>Megan Rapinoe is Sports Illustrated's 2019 Sportsperson of the Year. (Source: SI.com)</figcaption>
     </figure>
 
       <p>Before the final whistle, before the chants of “Equal pay!” ricocheted around Stade de Lyon, before Megan Rapinoe’s
@@ -37,6 +37,11 @@
       and on the day of the final were sitting just down the sideline. They were there because Megan had laid it on thick that this might be her last World Cup
       (she’ll reassess after the 2020 Olympics) but also because they know she can be as sensitive as she is tough, and even those who appear superhuman need support.
       Especially if they’ve been publicly questioned by the leader of the free world.<br><br></p>
+
+      <figure>
+        <img src="rapinoe2.jpg" alt="megan rapinoe portrait" width="900" height="600"><br>
+        <figcaption>Megan Rapinoe's signature pose. (Source: SI.com)</figcaption>
+      </figure>
 
       <p>For 34 years, since Megan was born 11 minutes after Rachael—since they learned to play soccer together at age five, since they came out to each other as gay
       when they were sophomores at the University of Portland—one sister has fortified the other. In France that meant Rachael pulled Megan aside during a family
